...

    @Deprecated("")
    val routes: List<Route> = listOf(
        Route(
            id = "1.1",
            direction = 1,
            destination = "Heliopolis",
            line = 1,
            stops = listOf(1, 2, 3, 4, 5),
        ),
        Route(
            id = "1.2",
            direction = 2,
            destination = "Puerta Triana",
            line = 1,
            stops = listOf(10, 9, 8, 7, 6),
        ),
    )

    @Deprecated("")
    val lines = listOf(
        Line("01", "Plg. Norte H. Virgen del Rocio", LineColor.Red, routes = routes, id = 1),
        Line("02", "Puerta Triana - Heliopolis", LineColor.Red, routes = routes, id = 2),
        Line("03", "Bellavista-S. Jeronimo-Pino Montano", LineColor.Orange, routes = routes, id = 3),
        Line("05", "Puerta Triana - Santa Aurelia", LineColor.Red, routes = routes, id = 5),
        Line("06", "Gta. S. Lázaro - Hosp. V. Rocio", LineColor.Red, routes = routes, id = 6),
        Line("10", "Ponce de León - San Jerónimo", LineColor.Blue, routes = routes, id = 10),
        Line("11", "Ponce de León - Los Principes", LineColor.Blue, routes = routes, id = 11),
        Line("12", "Ponce de León -  Pino Montano", LineColor.Blue, routes = routes, id = 12),
...
        .groupBy { it.group }
        .map { (group, linesForGroup) -> LinesScreenState.Content.GroupOfLines(group, linesForGroup) }

    @Deprecated("")
    val lineGroups = listOf(
        "Circulares",
        "Transversales",
        "Radiales Norte",
        "Radiales Este",
        "Radiales Sur",
        "Radiales Oeste",
        "Periféricas",
        "Barrios y Express",
        "Especiales",
        "Metroentro",
        "Nocturnas",
        "Otras",
    )

...
