...
    }
}

@Composable
private fun BusArrivals(arrivals: List<BusArrival>) {
    Column(Modifier.padding(16.dp), verticalArrangement = Arrangement.spacedBy(4.dp)) {
        Text("Líneas", style = SevTheme.typography.headingSmall, modifier = Modifier.padding(bottom = 4.dp))
        arrivals.forEach { arrival ->

            ListItem(
                colors = ListItemDefaults.colors(containerColor = AlexGreySurface),
                modifier = Modifier.clip(MaterialTheme.shapes.medium),
                headlineContent = { Text(text = arrival.route.destination) },
...
