...
internal fun InfoBannerTwoLinesActionPreview() {
    SevTheme {
        Surface {
            InfoBannerComponent(
                "Selecciona la parada de destino para ver la hora prevista de llegada.",
                Modifier.padding(16.dp),
                action = { TextButton(onClick = {}) { Text("Ver") } }
            )
        }
    }
}

@ScreenshotTest(ScreenshotSuite.Components)
...
