...
                                if (state is TopBarState.Search) {
                                    onSearchTermChanged("")
                                } else {
                                    onCancelClicked()
                                }
                            }) {
                                Icon(Icons.Filled.Clear, tint = SevTheme.colorScheme.onSurfaceVariant, contentDescription = "Clear search")
                            }
                        }
                    }
                }
            )
        }
...
