...
                    .calculateTopPadding()
            )
            .padding(top = 8.dp)
    ) {
        AnimatedVisibility(visible = isSearchActive) {
            CircularIconButton(onClick = onBack) {
                Icon(Icons.Default.Close, contentDescription = "Cerrar")
            }
        }

        RoundedSearchBar(
            topBarState,
            onSearchTermChanged,
...
        modifier.size(48.dp),
        shape = CircleShape,
        containerColor = SevTheme.colorScheme.background,
        contentColor = SevTheme.colorScheme.onSurfaceVariant,
    ) {
        if (currentUser?.photoUrl == null) {
            Icon(Icons.Filled.Person, contentDescription = "Profile")
        } else {
            AsyncImage(
                model = currentUser.photoUrl,
                modifier = Modifier
                    .size(48.dp - 8.dp)
                    .clip(CircleShape),
...
