appId: ${APP_ID}
name: "NEAR-03 Nearby asks to activate location when permission is not granted"
tags:
  - nearby
  - level1
---
- launchApp:
    clearState: true
    permissions:
      location: deny
    arguments:
      debugMapMode: ${MAP_MODE}
- extendedWaitUntil:
    visible: "Para ti"
    timeout: 30000
- tapOn: "Cercanas"
- extendedWaitUntil:
    visible: "Activa los servicios de localización.*"
    timeout: 10000
- assertVisible: "Activar localización"
